# oscnet

./: .gitignore  LICENSE  README.md  agents.md  pyproject.toml  requirements.txt  setup.py
docs/: experiment_report.md  modal_runs.md  model_api.md
examples/: README.md  analyze_mnist_reconstruction_artifacts.py  audio_digit_classification.py  audio_wavelet_oscillatory_autoencoder.py  compare_experiment_results.py  horn_original.py  image_mnist_generator.py  image_mnist_jepa.py  image_mnist_kuramoto_generator.py  image_mnist_oscillatory_autoencoder.py  image_mnist_phase_flow.py  image_mnist_phase_vae.py  image_mnist_shape_pixel.py  image_rfb_drive_probe.py  inspect_trace.py  resonanceDB.py
oscnet/: __init__.py
scripts/: analyze_generator_paired_deltas.py  analyze_generator_state_prior.py  analyze_generator_state_recovery.py  analyze_mnist_generator_frontier.py  modal_audio_digit.py  modal_mnist.py  modal_mnist_generator.py  modal_mnist_jepa.py  modal_mnist_phase_flow.py  modal_mnist_phase_vae.py  modal_mnist_shape_pixel.py  modal_un0_reference.py
tests/: test_analysis_imports.py  test_audio_digit.py  test_checkpoints.py  test_configs_and_phase.py  test_core_coupling.py  test_core_dynamics.py  test_core_smoke.py  test_example_audio_compat.py  test_example_boundaries.py  test_example_mnist_compat.py  test_experiment_results.py  test_gabor_rfb_encoder.py  test_generator_frontier.py  test_inspection.py  test_mnist_generator.py  test_mnist_jepa.py  test_mnist_phase_flow.py  test_mnist_phase_vae.py  test_mnist_shape_pixel.py  test_models_spine.py  test_resonators.py  (+2 more)
(+135 files in other folders)
